# omni-stream

./: .env.example  .gitignore  README.md  agent_app.py  app.py  coordinator_app.py  omni_stream_cli.py  pyproject.toml  requirements.txt
.github/workflows/: build-binaries.yml  semver-tag.yml
agent/: config.py  db.py  main.py  models.py  security.py
agent/routers/: __init__.py  inbox.py  shares.py
agent/services/: coordinator_sync.py  file_service.py
coordinator/: config.py  db.py  main.py  models.py
coordinator/routers/: __init__.py  auth.py  catalog.py  events.py  files.py  pairing.py  transfers.py
coordinator/services/: __init__.py  acl.py  agent_client.py  audit.py  auth.py  events.py  passcode.py  transfer_views.py
docs/: ARCHITECTURE.md
scripts/: bootstrap.ps1  bootstrap.sh  build_binary.py  bump_semver.py  download_release_assets.py  package_binary.py  publish_release_assets.py  smoke_binary.py
shared/: __init__.py  networking.py  path_utils.py  permissions.py  runtime.py  schemas.py  security.py
static/css/: login.css  main.css  setup.css
static/css/main/: part-01.css  part-02.css  part-03.css  part-04.css
static/js/: main.js
static/js/modules/: api.js  hub_explorer.js  network.js  preview.js  ui.js  utils.js
stream_server/: __init__.py  auth.py  config.py  routes.py  settings_store.py
stream_server/services/: __init__.py  file_service.py  file_service_catalog.py  hub_proxy.py
templates/: index.html  login.html  setup.html
tests/: test_cli.py  test_files_router_compact.py  test_runtime_paths.py  test_smoke.py  test_startup_defaults.py  test_transfer_views.py
(+11 files in other folders)
