[project]
name = "stream-local-files-on-same-network"
version = "0.1.2"
description = "Distributed LAN file access with coordinator + device agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask==3.1.3",
  "pillow==11.3.0",
  "fastapi==0.129.0",
  "uvicorn[standard]==0.41.0",
  "sqlalchemy==2.0.46",
  "alembic==1.18.4",
  "httpx==0.28.1",
  "argon2-cffi==25.1.0",
  "python-multipart==0.0.22",
]

[tool.uv]
package = false
